--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
   branch: main
-  repo: Beit-Halevi/beit-halevi.github.io # <-- השורה החשובה שנוספה!
+  repo: yt2178/beit-halevi.github.io # <-- השורה החשובה שנוספה!
 
 media_folder: "assets/uploads"
 public_folder: "/assets/uploads"
